LPS-83915 - Fix overlap

--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_header.scss
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_header.scss
@@ -1,5 +1,5 @@
 header {
-	.portlet:hover {
+	.portlet-boundary:hover {
 		z-index: 1050;
 	}
 
